@@ -1,15 +1,5 @@
 package org.totalboumboum.ai.v201314.tools;
 
-import java.io.IOException;
-import java.text.Normalizer;
-import java.text.Normalizer.Form;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Locale;
-
-import org.totalboumboum.ai.AiTools;
-import org.totalboumboum.tools.classes.ClassTools;
-
 /*
  * Total Boum Boum
  * Copyright 2008-2013 Vincent Labatut 
@@ -31,6 +21,22 @@ import org.totalboumboum.tools.classes.ClassTools;
  * 
  */
 
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.OutputStreamWriter;
+import java.io.PrintWriter;
+import java.text.Normalizer;
+import java.text.Normalizer.Form;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Locale;
+import java.util.Scanner;
+
+import org.totalboumboum.tools.classes.ClassTools;
+import org.totalboumboum.tools.files.FileNames;
 
 /**
  * Cette classe est utilisée pour générer des agents à compléter. A
@@ -58,6 +64,7 @@ public class AiGenerator
 		//String aiPack = "../TBBtemp/src/org/totalboumboum/ai/v201314/ais";
 	
 		// on définit les noms des auteurs du nouvel agent
+		@SuppressWarnings("unchecked")
 		List<List<String>> newNames = Arrays.asList(
 			Arrays.asList("Prénom1","Nom1"),
 			Arrays.asList("Prénom2","Nom2")
@@ -67,20 +74,171 @@ public class AiGenerator
 		copyAgent(oldPath, newNames);
 	}
 	
-	private static void copyAgent(String oldPath, List<List<String>> newNames)
-	{	// on récupère le chemin du pack contenant l'agent de référence
-		String packName = AiTools.getPackPackage(oldPath);
+	/**
+	 * Effectue la copie du code source d'un agent
+	 * de référence, afin d'obtenir un nouvel agent,
+	 * prêt à être implémenté par les auteurs spécifiés.
+	 * 
+	 * @param oldPackagePath
+	 * 		Chemin du package de l'agent de référence.
+	 * @param newNames
+	 * 		Noms des auteurs du nouvel agent.
+	 * @throws IOException
+	 * 		Problème lors de la lecture/écriture des fichiers.
+	 */
+	private static void copyAgent(String oldPackagePath, List<List<String>> newNames) throws IOException
+	{	System.out.println("Copie de l'agent "+oldPackagePath);
+		// on récupère les chemins nécessaires
+		File oldPackage = new File(oldPackagePath);
+		String oldPackageName = oldPackage.getName();
+		File pack = oldPackage.getParentFile();
+		String packPath = pack.getAbsolutePath();
+		String packName = pack.getParentFile().getName();
 
+		// nom qualifié du package contenant l'agent de référence
+		String packQualifiedName = ClassTools.getTbbPackage();
+		packQualifiedName = packQualifiedName + ClassTools.CLASS_SEPARATOR + FileNames.FILE_AI;
+		packQualifiedName = packQualifiedName + ClassTools.CLASS_SEPARATOR + packName;
+		packQualifiedName = packQualifiedName + ClassTools.CLASS_SEPARATOR + FileNames.FILE_AIS;
+//		String oldPackageQualifiedName = packQualifiedName + ClassTools.CLASS_SEPARATOR + oldPackageName;
 		
-		// le nouvel agent est créé dans le même package que l'agent de référence
-		String packageName = "";
+		// le nom du nouvel agent est obtenu à partir des noms des auteurs
+		String newPackageName = "";
 		for(List<String> name: newNames)
 		{	String lastName = name.get(name.size()-1);
 			lastName = lastName.toLowerCase(Locale.ENGLISH);
 			lastName = Normalizer.normalize(lastName, Form.NFD).replaceAll("\\p{InCombiningDiacriticalMarks}+", "");
-			packageName = packageName + lastName;
+			newPackageName = newPackageName + lastName;
+		}
+		String newPackagePath = packPath + File.separator + newPackageName;
+//		String newPackageQualifiedName = packQualifiedName + ClassTools.CLASS_SEPARATOR + newPackageName;
+		
+		// on copie tous les fichiers
+		File source = new File(oldPackagePath);
+		File target = new File(newPackagePath);
+		System.out.println("Package de destination : "+newPackagePath);
+		copyDirectory(source, target, oldPackageName, newPackageName, newNames);
+	}
+
+	/**
+	 * Copie et adapte le contenu d'un dossier
+	 * de l'agent de référence.
+	 * 
+	 * @param source
+	 * 		Dossier à copier.
+	 * @param target
+	 * 		Copie du dossier.
+	 * @param oldPackageName
+	 * 		Nom du package de l'agent de référence.
+	 * @param newPackageName
+	 * 		Nom du package du nouvel agent.
+	 * @param newNames
+	 * 		Noms des auteurs du nouvel agent.
+	 * @throws IOException
+	 * 		Problème lors de la lecture/écriture des fichiers.
+	 */
+	public static void copyDirectory(File source, File target, String oldPackageName, String newPackageName, List<List<String>> newNames) throws IOException
+	{	if(source.getAbsolutePath().contains(".svn"))
+		{	if(verbose)
+				System.out.println("ignore\t"+source.getAbsolutePath());
+		}
+		else
+		{	if(verbose)
+				System.out.println("traite\t"+source.getAbsolutePath());
+			if (source.isDirectory())
+			{	if (!target.exists())
+					target.mkdir();
+	            String[] files = source.list();
+	            for(int i=0;i<files.length;i++)
+	            {	String fileName = files[i];
+	            	File src = new File(source, fileName);
+	            	File trgt = new File(target, fileName);
+	            	copyDirectory(src,trgt,oldPackageName,newPackageName, newNames);
+	            }
+			}
+			else
+			{	copyFile(source,target,oldPackageName,newPackageName,newNames);
+	        }
+		}
+	}
+	
+	/**
+	 * Copie et adapte le contenu d'un fichier
+	 * de l'agent de référence.
+	 * 
+	 * @param source
+	 * 		Fichier à copier.
+	 * @param target
+	 * 		Copie du fichier.
+	 * @param oldPackageName
+	 * 		Nom du package de l'agent de référence.
+	 * @param newPackageName
+	 * 		Nom du package du nouvel agent.
+	 * @param newNames
+	 * 		Noms des auteurs du nouvel agent.
+	 * @throws IOException
+	 * 		Problème lors de la lecture/écriture des fichiers.
+	 */
+	public static void copyFile(File source, File target, String oldPackageName, String newPackageName, List<List<String>> newNames) throws IOException
+	{	// on ouvre la source
+		String sourceName = source.getName();
+		FileInputStream fileIn = new FileInputStream(source);
+		InputStreamReader reader = new InputStreamReader(fileIn);
+		Scanner scanner = new Scanner(reader);
+		
+		// on ouvre la cible
+		FileOutputStream fileOut = new FileOutputStream(target);
+		OutputStreamWriter writer = new OutputStreamWriter(fileOut);
+		PrintWriter printWriter = new PrintWriter(writer);
+		
+		boolean authors = false;
+		while(scanner.hasNextLine())
+		{	boolean ignore = false;
+			// on lit une ligne
+			String line = scanner.nextLine();
+			
+			// on remplace éventuellement le nom du package
+			line = line.replaceAll("\\."+oldPackageName, "."+newPackageName);
+			
+			// on remplace éventuellement le nom des auteurs
+			if(line.contains("@author"))
+			{	// fichier java
+				if(!sourceName.equals(FileNames.FILE_AI_MAIN_CLASS+FileNames.EXTENSION_JAVA))
+				{	ignore = true;
+					if(!authors)
+					{	authors = true;
+						for(List<String> names: newNames)
+						{	String l = " * @author";
+							for(String name: names)
+								l = l + " " + name;
+							printWriter.println(l);
+						}
+					}
+				}
+			}
+			else if(line.contains("<author name="))
+			{	// fichier xml
+				ignore = true;
+				if(!authors)
+				{	authors = true;
+					for(List<String> names: newNames)
+					{	String l = "\t\t<author name=\"";
+						for(String name: names)
+							l = l + name + " ";
+						l = l.substring(0,l.length()-1);
+						l = l + "\"/>";
+						printWriter.println(l);
+					}
+				}
+			}
+			
+			// on enregistre la ligne
+			if(!ignore)
+				printWriter.println(line);
 		}
 		
-		
+		// on referme le tout
+		scanner.close();
+        printWriter.close();
 	}
 }
